--- a/ui/mon-app/package.json
+++ b/ui/mon-app/package.json
@@ -22,6 +22,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.0.6"
+    "lightningcss": "^1.30.1",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "terser": "^5.43.1",
+    "vite": "^7.0.6",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
